instructor_admin/static/admin/css/create_quiz.css
body {
    background: #f9f9f9;
    margin-top: 0;
    margin-right: 0;
    margin-left: 0;
}

.header {
    display: grid;

    grid-gap: 0;
    grid-row-gap: 100px;
    row-gap: 100px;

    grid-template-rows: 67px;

    background: #FFFFFF;

    font: "Lucida Console";
    font-size: 18px;

    align-items: center;
    justify-items: center;

    border: solid 0.5px lightgrey;
}

.preview {
    display: grid;
    grid-template-rows: 67px;

    margin-top: 3%;

    background: #FFFFFF;

    font: "Lucida Console";
    font-size: 18px;

    align-items: right;
    justify-items: right;

    border: solid 0.5px lightgrey;
}

.preview_menu {
    grid-column: 5 / 6;
    display: grid;

    grid-template-rows: 35px;
    grid-template-columns: 200px;
}

.filter {
    grid-column: 2 / 2;
}

.filter_items {
    display: grid;
    margin-top: 50px;
    margin-bottom: 0;
    grid-template-columns: 4% auto 4%;

    align-items: right;
    justify-items: right;

    grid-auto-rows: 50px;

    grid-row-gap: 5%;
    row-gap: 5%;
}

.item_property {
    display: grid;

    align-items: center;
    justify-items: center;

    font-size: 23px;
    font-weight: 300;
}

.sub_description {
    color: #a4a4a4;
    font-size: 14px;
    font-weight: 300;

    display: block;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.message {
    margin: 8px;
    color: #737373;
}

.body {
    font-size: 23px;
    font-weight: 300;

    margin-top: 4%;
    grid-column: 2;
}

.body > textarea {
    width: 100%;
    height: 100%;
}

.text_properties {
    margin-top: 3%;
    display: grid;
    grid-row-gap: 5%;
    row-gap: 5%;

    grid-template-columns: 15% auto 20%;
}

.text_property_items {
    font-size: 23px;
    font-weight: 300;

    display: grid;

    grid-row-gap: 10%;
    row-gap: 10%;

    grid-column: 2;

    grid-template-columns: auto;
}

.over {
    background-color: #d1e1ed;
}

@media screen and (min-width:300px) and (max-width: 568px) {
    .text_items {
        margin-top: 2%;
        display: grid;
        grid-row-gap: 5%;
        row-gap: 5%;

        grid-template-columns: 4% auto 4%;
        grid-auto-rows: 110px;
    }

    .item_property {
        display: grid;

        align-items: center;
        justify-items: center;

        font-size: 9px;
    }

    .sub_description {
        color: #a4a4a4;
        font-size: 9px;

        display: block;

        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

.media {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 2em;
}

.media > * {
  flex: 1 1 250px;
  margin: 10px;
}

.footer_items {
    margin-top: 100px;
    margin-bottom: 0;

    display: grid;
    grid-template-columns: 4% auto 4%;

    align-items: center;
    justify-items: center;
}

.footer {
    grid-column: 2 / 2;
}

.question_section {
    margin-top: 2%;

    grid-row-gap: 50px;
    row-gap: 50px;

    display: grid;
    grid-template-columns: 15% auto 20%;
}

.question_parts {
    display: grid;
    background: #FFFFFF;
    border: solid 1px lightgrey;

    grid-column: 2;

    grid-template-columns: 2% auto 1.5%;
    grid-row-gap: 15px;
    row-gap: 15px;

    grid-column-gap: 15px;
    column-gap: 15px;
}

.question {
    padding: 20px 20px 20px 0px;
    background: #FFFFFF;
    display: grid;
    grid-row-gap: 15px;
    row-gap: 15px;

    grid-template-columns: 0 auto 10%;
}

.question_item {
    grid-column: 2;
}

.question_menu {
    position: relative;
    cursor: pointer;
}

.hidden {
    visibility: hidden;
}

.question_menu_overlay {
    position: absolute;

    z-index: 2;
    right: 0;

    background: #FFFFFF;

    font-family: "Helvetica Neue";
    font-size: 14px;

    border: solid 0.5px lightgrey;
    border-radius: 2px;
    box-shadow: 0 1px 16px rgba(0,0,0,.1);
    display: grid;

    grid-template-columns: 20% 200px 20%;

    cursor: pointer;
}

.question_menu_item {
    margin: 5px 5px 5px 5px;
    grid-column: 2;
}

.answer_item {
    color: #a4a4a4;
    grid-column: 2;
}

.answer_feedback {
    margin-top: 3px;
    word-wrap: break-word;
}

.grey_bg {
    background: #F7F7F7;
}

.add_question {
    margin-top: 10px;
    grid-column: 2;
    cursor: pointer;
}

.delete {
    align-items: right;
    justify-items: right;
}

.submit_section {
    display: grid;
    grid-template-columns: 15% 20% auto 20% 20%;
}

.submit {
    grid-column: 2;
    cursor: pointer;
}

.input_error {
    border: 1px solid #ff0000;
    background-color: #ffeeee;
}

